Fix line break in build header (#1282)

--- a/app/styles/app/modules/build-header.sass
+++ b/app/styles/app/modules/build-header.sass
@@ -96,5 +96,6 @@
   margin: 1rem 0
   list-style: none
   line-height: 1.7
+  white-space: nowrap
   .commit-clock
     margin-bottom: 1rem
